docs: simplify README build steps and rewrite packaging scripts